# kinect-duplo-sensing

./: README.md  index.html  index.md  params.json
images/: segmentation_gif.xcf
sw/pcl_duplo_sense_node/: .cloud_cluster_0.pcd.swp  CMakeLists.txt  convex_hull_tests.cpp  distance_formula.ods  duplo.launch  estimate_area_volume.patch  mainpage.dox  manifest.xml
sw/pcl_duplo_sense_node/include/my_pcl_tutorial/: convex_hull.h  pcl_config.h
sw/pcl_duplo_sense_node/sagar/: CMakeLists.txt  Distance.cpp
sw/pcl_duplo_sense_node/src/: concave_hull_2d.cpp  duplo_samesize.cpp  duplo_samesize_kinect.cpp  duplo_samesize_kinect_old.cpp  duplo_samesize_old.cpp  duplo_samesize_vis.cpp  pcl_visualizer_demo.cpp
sw/pcl_duplo_sense_node/surface/include/pcl/surface/: convex_hull.h.rej
sw/pcl_duplo_sense_node/surface/include/pcl/surface/impl/: convex_hull.hpp.rej
